# module-fsevent

./: .gitlab-ci.yml  CMakeLists.txt  README
docs/: Doxyfile.in  mainpage.dox.tmpl
qlib/: FilePoller.qm  FsEventPoller.qm  FsEventPollerUtil.qm
src/: QC_AbstractFsWatcher.qpp  QC_FSWatcher.qpp  constants.qpp  fsevent.qpp
src/efsw/: FileWatcherFSEvents.cpp  FileWatcherInotify.cpp  FileWatcherInotify.hpp  FileWatcherKqueue.cpp  FileWatcherWin32.cpp  WatcherKqueue.cpp  WatcherKqueue.hpp
src/efsw/platform/posix/: ThreadImpl.cpp
test/: FilePoller.qm.qtest  FsEventPoller.qm.qtest  fsevent.qtest  test.q
test/docker_test/: test.sh
